# pyroxene_v2

./: .gitignore  .gitmodules  LICENSE.md  dev_setup.sh  install.py  run.py  run.sh  run_DEPRECATED.sh
.github/workflows/: build_logger_foundry.yml  logger_foundry_run.yml  test_install.yml
backend_llvm_cpp/: CMakeLists.txt  backend_run.py  backend_run.sh
backend_llvm_cpp/src/: main.cpp
backend_llvm_cpp/src/socket_comm/: CMakeLists.txt  socket_comm.cpp  socket_comm.h
frontend-haskell/: frontend-haskell.cabal  frontend_hs.sh  frontend_run.py  stack.yaml
frontend-haskell/lib/LogLib/: Logger.hs
frontend-haskell/src/: Main.hs
frontend_rs/: frontend_run.sh
logger_daemon/: CMakeLists.txt  run_logger.sh
logger_daemon/src/: logger.cpp
logger_daemon/src/buffer_parser_strategies/: CMakeLists.txt
logger_daemon/src/buffer_parser_strategies/default_pyroxene_strategy/: default_pyroxene_strategy.cpp  default_pyroxene_strategy.h
logger_daemon/src/buffer_parsing/: CMakeLists.txt  buffer_parser.cpp  buffer_parser.h
logger_daemon/src/daemon_orchestrator/: CMakeLists.txt  daemon_orchestrator.cpp  daemon_orchestrator.h
logger_daemon/src/input_socket/: CMakeLists.txt  input_socket.cpp  input_socket.h
logger_daemon/src/log_writer/: CMakeLists.txt  log_writer.cpp  log_writer.h
logger_daemon_pyroxene/: CMakeLists.txt  build_pyroxene_daemon.py  build_pyroxene_daemon.sh
logger_daemon_pyroxene/pyroxene_logger_parser_strategy/: CMakeLists.txt  pyroxene_logger_parser_strategy.cpp  pyroxene_logger_parser_strategy.h
logger_daemon_pyroxene/pyroxene_logger_shutdown_strategy/: CMakeLists.txt  pyroxene_shutdown_strategy.cpp  pyroxene_shutdown_strategy.h
logger_daemon_pyroxene/pyroxene_logger_strategy/: CMakeLists.txt  pyroxene_logger_strategy.cpp
logger_daemon_pyroxene/src/: logger.cpp
logger_daemon_pyroxene/test_socket/: CMakeLists.txt  test_socket.cpp  test_socket.h
logger_foundry/: CMakeLists.txt  LICENSE.md  README.md  build_logger.sh  build_logger_foundry.py  install.py  run_ci.py
logger_foundry/.github/workflows/: build_logger_foundry.yml  logger_foundry_run.yml
logger_foundry/ci_tests/: build_test_foundry.py
logger_foundry/ci_tests/end_to_end_tests/test_unix_and_web_socket/: logger_daemon.cpp  test_unix_and_web_socket.py
logger_foundry/cmake/: logger_foundryConfig.cmake.in
logger_foundry/config_headers/: socket_config_structs.h
logger_foundry/include/logger_foundry/: logger_foundry.h
logger_foundry/src/: CMakeLists.txt  logger_foundry.cpp
logger_foundry/src/buffer_parsing/: CMakeLists.txt  buffer_parser.cpp  buffer_parser.h
logger_foundry/src/daemon_orchestrator/: CMakeLists.txt  daemon_orchestrator.cpp  daemon_orchestrator.h
logger_foundry/src/input_socket/: CMakeLists.txt  input_socket.cpp  input_socket.h
logger_foundry/src/log_writer/: CMakeLists.txt  log_writer.cpp  log_writer.h
middle_end_rs/: Cargo.toml  middle_end_run.py  middle_end_run.sh
middle_end_rs/src/: main.rs
